<resources>
    <string name="app_name">Esait Biriyani Center</string>
    <string name="action_settings">Settings</string>
    <string name="call_us">Call us</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_message">Welcome to Esait Biriyani center</string>
    <string name="get_food_home">Get our Biriyani to your home!</string>
    <string name="order_summary">Order Summary</string>
    <string name="description_service">We need few more details before placing your order</string>
    <string name="phone_number">* Phone Number</string>
    <string name="whatsapp">We will reach out to you via Whatsapp/SMS on this number.</string>
    <string name="gmail">Please provide your mail ID (Optional)</string>
    <string name="submit">Place Order</string>
    <string name="additional_info">* Address</string>
    <string name="your_name">* Your Name</string>
    <string name="special_packing">Special packing ₹20/pack\n(Not applicable for Chicken 65)</string>
    <string name="delivery_charges_info">Delivery charges ₹%s</string>
    <string name="distance_fee_applicable">(Distance fee applicable)</string>
    <string name="delivery_charges_info_for_user">Delivery charges will be applicable only if total is lesser than 500</string>
    <string name="proceed">Proceed to Order</string>
    <string name="additional_comments">Comments</string>
    <string name="whatsappinfo">NOTE : As of now we use WhatsApp for confirmation of order so Order will be confirmed regarding availability of stock through WhatsApp chat.</string>
    <string name="dialogMessage">We will be redirecting you to whatsapp now for order placement, please click send from there to our shop.</string>
    <string name="dialogMessageSpecialPacking">Special packing will be done like this.</string>
    <string name="cbstr">Save Details</string>
    <string name="closed">We are sorry</string>
    <string name="shopclose">Sorry we are closed now.</string>
    <string name="time">11AM TO 3PM\n 6PM TO 9PM</string>
    <string name="timee">We are Open during</string>
    <string name="btclose">Close</string>
    <string name="appname">KotlipApp</string>
    <string name="latitudeBabel">Latitude</string>
    <string name="longitudeBabel">Longitude</string>
    <string name="offer">E.SAIT OFFERS</string>
    <string name="sorry">The delivery radius will be around to 15km.</string>
    <string name="refresh">Please close and reopen the app to get current menu items availability</string>



</resources>