<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorAccent"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="55dp">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                >



                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/order_summary"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    />

                <TextView
                    android:id="@+id/summary_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="test"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/textView3"
                    android:layout_marginTop="10dp"
                    />

                <View
                    android:id="@+id/separator_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#88424242"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintTop_toBottomOf="@id/summary_details"/>

                <TextView
                    android:id="@+id/grand_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="test"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/separator_line" />

                <EditText
                    android:id="@+id/editTextTextEmailName"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:ems="10"
                    android:hint="@string/your_name"
                    app:layout_constraintTop_toBottomOf="@id/textView4"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/description_service"
                    app:layout_constraintTop_toBottomOf="@id/grand_total" />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:ems="10"
                    android:hint="@string/additional_info"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toBottomOf="@id/editTextTextEmailName" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:layout_marginTop="10dp"
                    android:maxLength="10"
                    app:layout_constraintTop_toBottomOf="@id/editTextAddress" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/editTextPhone"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    />

                <EditText
                    android:id="@+id/editTextComments"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:hint="@string/additional_comments"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/textView5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsappinfo"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/editTextComments" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="249dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cbstr"
                        android:layout_marginTop="10dp"/>
                    <Button
                        android:id="@+id/submitbutton"
                        android:layout_width="match_parent"

                        android:layout_height="50dp"
                        android:background="@color/colorAccent"
                        android:text="@string/submit"
                        android:textColor="#FFFFFF"
                        android:layout_marginTop="50dp"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>