<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    android:background="@color/colorAccent"
    android:visibility="visible"
    tools:context="com.example.esaitbiriyanicenter.ShopClosedActivity"
    tools:visibility="visible">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="184dp"
        android:layout_height="220dp"
        android:background="@drawable/closed"
        app:layout_constraintTop_toBottomOf="@id/textView9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/shopclose"
        android:textColor="@color/cardview_light_background"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/time"
        android:textSize="20dp"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/timee"
        android:textSize="20dp"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btclose"
        android:background="@color/cardview_light_background"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>