<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/biriyani_image"
        android:layout_width="95dp"
        android:layout_height="70sp"
        android:layout_marginTop="4dp"
        android:background="@drawable/biriyani_1"
        app:layout_constraintTop_toBottomOf="@+id/header_service_disp"
        app:layout_constraintStart_toStartOf="@+id/header_service_disp"
       />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="70sp"
        app:layout_constraintStart_toEndOf="@id/biriyani_image"
        app:layout_constraintTop_toBottomOf="@id/header_service_disp"

        android:background="@drawable/chicken_65"
        android:layout_marginTop="4dp"

         />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="70sp"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/header_service_disp"
        android:background="@drawable/biriyani_2"
        android:layout_marginTop="4dp"
        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="70sp"
        app:layout_constraintStart_toEndOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/header_service_disp"
        android:background="@drawable/biriyani_3"
        android:layout_marginTop="4dp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biriyani_image"
        app:layout_constraintVertical_bias="0.0"
        android:scrollbars="vertical" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_service_disp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/esait_icon"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-black"
            android:paddingLeft="3dp"
            android:paddingTop="2sp"
            android:text="@string/welcome_message"
            android:textColor="#34A30B"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView2"
            tools:ignore="MissingConstraints"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif-black"
            android:paddingLeft="3dp"
            android:text="@string/get_food_home"
            android:textColor="#131313"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:background="@drawable/covid19"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintLeft_toRightOf="@+id/imageView2"
            android:layout_marginLeft="8dp"
             />

        <TextView
            android:id="@+id/safety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-black"
            android:paddingLeft="3dp"
            android:text="Best Safety standards for Covid-19!"
            android:textColor="#CC2626"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/tick"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/halal"
            android:layout_marginTop="10dp"
            tools:ignore="MissingConstraints"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special_packing"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/info_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/info_icon"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_charges_info"
        app:layout_constraintTop_toBottomOf="@id/checkBox"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="@id/recycler_view"
        android:textSize="12dp"
        android:paddingLeft="10dp"
         />

    <Button
        android:id="@+id/proceed_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/proceed"
        android:background="@drawable/proceed"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>